app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
spec:
  replicas: 3  # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-html-2
