http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: app-external
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  # hostnames:
  # - "example.com"
  rules:
  - matches:
    - path:
        
        value: /nginx
    backendRefs:
    - name: app-1-lb
      port: 80
  - matches:
    - path:
        
        value: /login
    backendRefs:
    - name: app-2-lb
      port: 80
